tests/corpus/type_error/trace.txt
Traceback (most recent call last):
  File "/home/suraj/Desktop/let-me-fix/tests/corpus/type_error/main.py", line 5, in <module>
    result = process_data("hello")
             ^^^^^^^^^^^^^^^^^^^^^
  File "/home/suraj/Desktop/let-me-fix/tests/corpus/type_error/main.py", line 2, in process_data
    return data * data  # expects int, might get str
           ~~~~~^~~~~~
TypeError: can't multiply sequence by non-int of type 'str'